--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+在原rstblog上面作了写小修改, 方便自己的使用环境
+
+原README:
+
 My NIH static blog replacement for my old dynamic blog.
 
 Totally nothing new but does the trick for me.
